<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"

    >

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/title_edit3"
      android:id="@+id/edit1"
      android:layout_margin="15dp"

      />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_edit4"
        android:id="@+id/edit2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="25dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:text="@string/add"
           android:id="@+id/button_add"
           />

</LinearLayout>
